--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -34,7 +34,7 @@
                 <a class="nav-link" href="{% url 'dice_roller' %}">Dice Roller</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'sing_up' %}">Sing Up</a>
+                <a class="nav-link" href="{% url 'sign_up' %}">Sing Up</a>
               </li>
             </ul>
             <ul class="navbar-nav">
